--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="../client/src/assets/Logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eyeconic Mentorship Platform</title>
+    <title>Eyeconic Mentorship Platform | Best NEET PG Coaching & Score Booster</title>
+    <meta name="description" content="Eyeconic by Dr. Gourav Lalla is India's best NEET PG coaching and mentorship platform. Personalized guidance, score booster strategies, and proven results for NEET PG aspirants. Join Eyeconic for the ultimate NEET PG preparation." />
+    <meta name="keywords" content="Eyeconic, NEET PG, NEET PG coaching, NEET PG mentorship, best NEET PG coaching, NEET PG score booster, NEET PG preparation, Dr. Gourav Lalla, medical coaching, NEET PG online, NEET PG best mentorship, NEET PG results, NEET PG toppers, NEET PG strategy, NEET PG guidance, NEET PG India, NEET PG batch, NEET PG course, NEET PG program, NEET PG success, NEET PG mock test, NEET PG test series, NEET PG foundation, NEET PG dropper, NEET PG internship, NEET PG live classes, NEET PG personalized, NEET PG community, NEET PG support, NEET PG best results" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Eyeconic Mentorship Platform | Best NEET PG Coaching & Score Booster" />
+    <meta property="og:description" content="Join Eyeconic for India's best NEET PG coaching and mentorship. Personalized guidance, score booster strategies, and proven results for NEET PG aspirants." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://eyeconic.in/" />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Eyeconic Mentorship Platform | Best NEET PG Coaching & Score Booster" />
+    <meta name="twitter:description" content="Eyeconic by Dr. Gourav Lalla is India's best NEET PG coaching and mentorship platform. Personalized guidance, score booster strategies, and proven results for NEET PG aspirants." />
+    <meta name="twitter:image" content="/og-image.jpg" />
+    <link rel="canonical" href="https://eyeconic.in/" />
   </head>
   <body>
     <div id="root"></div>
