--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="../client/src/assets/Logo.jpg" />
+    <link rel="icon" type="image/png" href="../client/src/assets/EC Favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eyeconic Mentorship Platform | Best NEET PG Coaching & Score Booster</title>
     <meta name="description" content="Eyeconic by Dr. Gourav Lalla is India's best NEET PG coaching and mentorship platform. Personalized guidance, score booster strategies, and proven results for NEET PG aspirants. Join Eyeconic for the ultimate NEET PG preparation." />
